# hipo

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.web  README.md  SPONSORS.md  debug.ps1
.agents/skills/speckit-agent-context-update/: SKILL.md
.agents/skills/speckit-git-feature/: SKILL.md
.agents/skills/speckit-git-validate/: SKILL.md
.agents/skills/speckit-repoindex-architecture/: SKILL.md
.agents/skills/speckit-repoindex-module/: SKILL.md
.agents/skills/speckit-repoindex-overview/: SKILL.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/speckit/repo_index/: architecture.md  duckle-mcp_fileindex.json  duckle-mcp_profile.md  overview.md
.github/workflows/: ci.yml  pypi.yml  release.yml  runner-package-smoke.yml  spec-kit-direct-quack.yml  spec-kit-finalize-quack.yml  t060-self-patch.yml
.specify/: extension-catalogs.yml  extensions.yml  feature.json  init-options.json  integration.json
.specify/bugs/query-source-log-affinity/: assessment.md  fix.md
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json  catalog-ebf165086500aab1.json  catalog-metadata.json
.specify/extensions/repoindex/: README.md  extension.yml
.specify/integrations/: codex.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/desktop/: Cargo.toml  build.rs  build_base.rs  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: app_settings.rs  ci_status.rs  dbt_engine.rs  engine_manager.rs  lib.rs  llama_chat.rs  samples.rs  secrets.rs  update_check.rs  workspace_git.rs
crates/connectors/src/: csv.rs
crates/duckdb-engine/: Cargo.toml  build.rs
crates/duckdb-engine/examples/: inspect_mssql.rs
crates/duckdb-engine/src/: affinity_session.rs  connectors.rs  context.rs  dive.rs  drift.rs  gizmosql.rs  history.rs  lib.rs  plan.rs  pyexpr.rs  run_log.rs  trust.rs  util.rs
crates/duckdb-engine/tests/: execution.rs  legacy_disabled.rs  quack_runner_cutover.rs  quack_runner_data_tools.rs  quack_runner_lifecycle.rs  quack_runner_lifecycle_telemetry.rs  quack_runner_parity.rs  quack_runner_transport.rs
crates/duckle-db-runner/: Cargo.toml  build.rs
crates/duckle-db-runner/examples/: entry_point_probe.rs
crates/duckle-db-runner/src/: autoscaler.rs  bootstrap.rs  bundle.rs  cutover.rs  demand.rs  events.rs  lib.rs  local_process_provider.rs  local_quack_sidecar.rs  model.rs  process_cleanup.rs  resources.rs  run_database.rs  run_session.rs  sidecar_diagnostics.rs  windows_bootstrap.rs  worker_pool.rs
crates/duckle-db-runner/tests/: autoscaler.rs  cutover_template.rs  local_process_provider.rs  run_session.rs  security_redaction.rs  single_runner_cutover.rs  worker_pool.rs
crates/duckle-lance/: Cargo.toml
crates/duckle-lance/src/: main.rs
crates/duckle-mcp/: Cargo.toml  catalog.json
crates/duckle-mcp/src/: catalog.rs  main.rs  run_tool.rs  runner_controller.rs  tools.rs
crates/duckle-runner/: Cargo.toml  build.rs
crates/duckle-runner/src/: branch.rs  build.rs  db_sidecar.rs  main.rs  manifest.rs  panel.html  runner_controller.rs  selfextract.rs  serve.rs
crates/duckle-runner/tests/: package_smoke.rs  serve_cutover.rs  sidecar_e2e.rs
crates/duckle-secrets/: Cargo.toml
crates/duckle-secrets/src/: lib.rs
crates/duckle-secrets/tests/: connection_e2e.rs
crates/metadata/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  runner_controller.rs
docs/: roadmap.md
docs/architecture/: README.md  adr-affinity-session.md  adr-quack-sidecar-runner.md  adr-worker-identity-bootstrap-security.md  component-extension-guide.md  domain-model.md  execution-model.md  ipc-contracts.md  quack-sidecar-phase-0-report.md  system-overview.md
docs/current/: installation.md
docs/feature-intents/: 002-universal-query-source-and-multi-input-query.md  003-quack-sidecar-database-runner.md
docs/salesforce-sink/: IMPLEMENTATION.md
docs/salesforce-sink/live-suite/: .gitignore  README.md  b1_bulk_insert.json  b2_bulk_upsert.json  b3_bulk_delete.json  b4_bulk_retrieve.json  b5_bulk_badid.json  q1_bulk_query.json  run-suite.sh  s1_insert.json  s2_retrieve.json  s3_update.json  s4_upsert.json  s5_retrieve2.json  s6_delete.json  t4_bearer_inline.json  t6_wrongkind.json  t7_missingref.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/scripts/: export-catalog.ts  gen-brand-icons.mjs
frontend/src/: App.tsx  DataSourceRefField.tsx  EngineUpgradeBanner.tsx  GuidedTour.tsx  UpdateBanner.tsx  accounts.ts  clipboard.ts  errors.ts  legacy-disabled.test.ts  legacy-disabled.ts  main.tsx  node-subtitle.ts  pipeline-types.ts  repo-types.ts  run-resolve.ts  schema-resolve.ts  styles.css  tauri-bridge.ts  useUndoRedo.ts  workspace.ts
marketing/promo/: build-v02.sh  build.sh  edit-whatsnew.sh
packaging/pypi/: .gitignore  PUBLISHING.md  README.md  build_wheel.py  generate_components.py  make_demo_svg.py  pyproject.toml
packaging/pypi/duckle/: __init__.py  __main__.py  _components.py  _ns.py  api.py  expr.py
scripts/: apply-t060.py  install.sh  render_icon.py
specs/001-shared-data-source-affinity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-quack-sidecar-database-runner/: .finalize-trigger  _readme.md  cutover-evidence.template.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
spikes/quack-sidecar/: Cargo.toml  README.md
spikes/quack-sidecar-phase0-spike/: README.md
spikes/quack-sidecar/src/: main.rs
website/: 404.html  index.html  learn.html  llms.txt  site.webmanifest  sitemap.xml  use-cases.html
website/docs/: ai-duckie.html  automation.html  components.html  getting-started.html  index.html  integrations.html  learn.html
(+96 files in other folders)
