[package]
name = "duckle-db-runner"
description = "Official isolated DuckDB/Quack runner for Duckle pipeline runs."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
getrandom = "0.3"
hmac = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zeroize = "1.8"
# Keep the official runner on the version validated by the isolated Phase 0
# spike. It intentionally coexists with the current CLI engine dependency
# until the approved cutover.
duckdb = { version = "=1.10504.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Pipes", "Win32_System_Threading"] }
