[package]
name = "duckle-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Model Context Protocol server for Duckle. Speaks newline-delimited JSON-RPC
# over stdio so any MCP client (Claude Desktop / Claude Code, etc.) can list
# components, generate pipelines into a chosen directory, validate them, run
# them, build standalone artifacts, and manage saved connections - reusing the
# DuckDB engine directly (no GUI, no Node runtime).
[[bin]]
name = "duckle-mcp"
path = "src/main.rs"

[dependencies]
duckle-db-runner = { workspace = true }
duckle-duckdb-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Teradata (ODBC via odbc-api) is enabled everywhere except macOS, whose
# cross-arch ODBC driver manager is awkward to link in the release build. On
# macOS the engine falls back to a clear "compiled without teradata" error.
[target.'cfg(not(target_os = "macos"))'.dependencies]
duckle-duckdb-engine = { workspace = true, features = ["teradata"] }

# On Linux, additionally link unixODBC statically so the bundled binary needs no
# system libodbc.so.2 at runtime (issue #131). Windows keeps odbc32.
[target.'cfg(target_os = "linux")'.dependencies]
duckle-duckdb-engine = { workspace = true, features = ["teradata-static"] }
