[package]
name = "duckle-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Model Context Protocol server for Duckle. Speaks newline-delimited JSON-RPC
# over stdio so any MCP client (Claude Desktop / Claude Code, etc.) can list
# components, generate pipelines into a chosen directory, validate them, run
# them, build standalone artifacts, and manage saved connections - reusing the
# DuckDB engine directly (no GUI, no Node runtime).
[[bin]]
name = "duckle-mcp"
path = "src/main.rs"

[dependencies]
duckle-duckdb-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Teradata (ODBC via odbc-api) is enabled everywhere except macOS, whose
# cross-arch ODBC driver manager is awkward to link in the release build. On
# macOS the engine falls back to a clear "compiled without teradata" error.
# musl is excluded for the same reason duckle-runner excludes it: there is no
# static libodbc to link against, so odbc-sys fails with "could not find native
# static library `odbc`", and Teradata would need a dynamic ODBC driver manager
# at run time regardless. The engine returns a clear "compiled without teradata"
# error on those targets. This matters now that the musl build is what the Linux
# PyPI wheel carries.
[target.'cfg(all(not(target_os = "macos"), not(target_env = "musl")))'.dependencies]
duckle-duckdb-engine = { workspace = true, features = ["teradata"] }

# On gnu Linux, additionally link unixODBC statically so the bundled binary needs
# no system libodbc.so.2 at runtime (issue #131). Windows keeps odbc32.
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
duckle-duckdb-engine = { workspace = true, features = ["teradata-static"] }
