[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckle"
# Kept in step with apps/desktop/tauri.conf.json, the one real version string.
version = "0.5.7"
description = "Local-first ETL/ELT pipelines that run on DuckDB. Headless CLI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Slothflow Labs" }]
keywords = ["etl", "elt", "duckdb", "data-engineering", "pipeline", "data-integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Build Tools",
]

# The engine. duckdb-cli is published by the DuckDB Foundation (MIT) and puts a
# real `duckdb` executable on PATH, which is what the runner shells out to.
# Pinned to the version Duckle pins in .duckdb-cli-v1.5.4 so a pip install is
# reproducible and needs no first-run download - which is what keeps it usable
# on a machine with no outbound network at run time.
dependencies = ["duckdb-cli==1.5.4"]

[project.urls]
Homepage = "https://duckle.org"
Source = "https://github.com/slothflowlabs/duckle"
Issues = "https://github.com/slothflowlabs/duckle/issues"

[project.scripts]
duckle = "duckle.__main__:main"

[tool.setuptools]
packages = ["duckle"]
include-package-data = true

[tool.setuptools.package-data]
duckle = ["duckle-runner", "duckle-runner.exe"]
