[package]
name = "duckle-quack-sidecar-spike"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.85.1"

# Keep the spike independent from the production workspace. duckdb-rs 1.10504
# embeds DuckDB 1.5.4 and currently requires Rust 1.85.1, while Duckle still
# advertises Rust 1.80 for its production crates.
[workspace]

[dependencies]
duckdb = { version = "=1.10504.0", features = ["bundled"] }
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
